# ax5_infrared_save

./: CMakeLists.txt  README.md  package.xml
classes/: camera.cpp  camera.h
include/: parameters.json  parameters_json.cpp  parameters_json.h
src/: main.cpp
